--- a/twitter-nlp-sa.ipynb
+++ b/twitter-nlp-sa.ipynb
@@ -175,10 +175,11 @@
    },
    "outputs": [],
    "source": [
-    "dataset_filename = os.listdir(\"../input\")[0]\n",
-    "dataset_path = os.path.join(\"..\",\"input\",dataset_filename)\n",
+    "# dataset_filename = os.listdir(\"../input\")[0]\n",
+    "# dataset_path = os.path.join(\"..\",\"input\",dataset_filename)\n",
+    "# dataset_path = 'C:/Users/Geovanny/Documents/Repositorios/twitter-bigdata/data/dataset-depurado.csv'\n",
     "print(\"Open file:\", dataset_path)\n",
-    "df = pd.read_csv(dataset_path, encoding =DATASET_ENCODING , names=DATASET_COLUMNS)"
+    "df = pd.read_csv(dataset_path, encoding=DATASET_ENCODING , names=DATASET_COLUMNS, sep=';')"
    ]
   },
   {
@@ -939,9 +940,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Twitter Sentimental Analysis",
    "language": "python",
-   "name": "python3"
+   "name": "twitter"
   },
   "language_info": {
    "codemirror_mode": {
@@ -953,7 +954,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
