--- a/test-2.ipynb
+++ b/test-2.ipynb
@@ -121,7 +121,7 @@
    ],
    "source": [
     "# Importar los datos\n",
-    "dataset = 'data/expropiese.csv'\n",
+    "dataset = 'data/data.csv'\n",
     "df = pd.read_csv(dataset, sep=',')\n",
     "df.head(2)"
    ]
